[devicetree language support] new approach for preprocessor
GitOrigin-RevId: ff8b45c3beeea030aaeab9499d266630861d02d6